--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -89,7 +89,7 @@ Obwohl viele bekannte Projekte weiterhin unter ,,Environmental Science'', wie Wi
 besteht in einer großen Anzahl der Projekte die Arbeit für den Citizen Scientist nur aus nicht maschinell abstrahierbarer Computerarbeit,
 welche wenig bis keine Vorkenntnisse erfordert.
 
-Unter Berücksichtigung der bis hierhin erwähnten Fakten, könnte man also bereits versuchen, den Citizen Scientist zu definieren, wie Wiederhold im ersten Absat ihres Artikels,
+Unter Berücksichtigung der bis hierhin erwähnten Fakten, könnte man also bereits versuchen, den Citizen Scientist zu definieren, wie Wiederhold im ersten Absatz ihres Artikels,
 in dem sie Cohn zitiert: ,,The term 'citizen scientists' refers to volunteers who participate as field assistants in scientific studies.
 Citizen scientists...are not paid for their assistance, nor are they necessarily even scientists.'' \cite{Cohn} (58:192-7).
 Dabei scheint diese Definition auf den ersten Blick treffend die Umstände zu beschreiben,
@@ -99,23 +99,22 @@ eines Projektzieles, oder auch welche Finanzierungsmöglichkeiten für solche Pr
 Wie genau ist es mit der Wissenschaftlichkeit des Projektes zu nehmen und muss es einem gesellschaftlichen, also eher wohltätigen,
 Zweck dienen oder darf es auch einen kommerziellen Charakter aufweisen?
 Wo ist die Grenze zum Crowdsourcing\footnote{Crowdsourcing: Bezeichnend für das Auslagern interner Aufgaben eines Unternehmens an Freiwillige Nicht-Angestellte.
-Angelehnt an den Begriff Outsourcing, bei dem Drittunternehmen ausgelagerte Aufgaben verrichten. Häufig wird Crowdsourcing über das Internet reaöosoert.} zu ziehen?
+Angelehnt an den Begriff Outsourcing, bei dem Drittunternehmen ausgelagerte Aufgaben verrichten. Häufig wird Crowdsourcing über das Internet realisiert.} zu ziehen?
 
 Um diese Fragen für uns beantworten zu können, befassten wir uns mit unterschiedlichen, bereits existierenden Projekten.
 Einige davon gehörten eindeutig zum Crowdsourcing, andere wiederum waren für uns nicht so eindeutig zuzuordnen.
 Gewissermaßen kann man also Crowdsourcing und Citizen Science als zwei gegensätzliche Pole einer Skala betrachten.
 Dieser Meinung ist auch Haklay\cite{Haklay} (pp 105-122), der diese Skala näher analysierte, worauf im kommenden Kapitel eingegangen werden soll.
 \newline
-Auch Crowston und Wiggins\cite{CW} versuchen sich an einer eigenen Definition von Citizen Science.
-Im Rahmen ihrer Untersuchung hielten sie fest, dass sich das Spektrum der Projekte in fünf Kategorien unterteilen lässt:
+Auch Crowston und Wiggins\cite{CW} versuchten sich an einer eigenen Definition von Citizen Science.
+Laut ihrer Untersuchung lässt sich das Spektrum der Projekte in folgende fünf Kategorien unterteilen:
 ,,Based on the clustering, we identified five mutually exclusive and exhaustive types of projects,
 which we labelled Action, Conservation, Investigation, Virtual and Education'' (S. 5).
 Auch diese sollen im Folgekapitel noch einmal einzeln Erwähnung finden.
 Unter Berücksichtigung dieser Kategorisierung fällt es womöglich schon um einiges leichter,
 sich ein Bild vom Charakter der Citizen Science zu machen.
 Ein letzter Definitionsversuch, der hier Erwähnung finden soll, kommt ebenfalls von Cohn,
-als ,,die wissenschaftlichen Aktivitäten in denen nicht-professionelle Wissenschaftler sich freiwillig an Datensammlung,
-Analyse und Verbreitung eines wissenschaftlichen Projekts.''\cite{Cohn}.%dieser Satz kein Verb? FIXME
+als ,,die wissenschaftlichen Aktivitäten in denen nicht-professionelle Wissenschaftler sich freiwillig an Datensammlung, Analyse und Verbreitung eines wissenschaftlichen Projekts beteiligen.''\cite{Cohn}.
 An dieser Definition lassen sich vor allem zwei bemerkenswerte Tatsachen finden. Zum einen ist es ein Versuch,
 sich über die Definition eines Citizen Scientists zu definieren. Zum anderen wird ausdrücklich darauf aufgebaut,
 dass es sich bei Citizen Science um eine wissenschaftliche Tätigkeit handelt.
