--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -49,7 +49,7 @@ Das Projekt TranscriptionDesk wurde im Zuge des Moduls ,,Citizen Science'' an de
 Das Thema umfasste die Konzeption und Entwicklung einer Webplattform nach dem Paradigma der Citizen Science,
 welche eine dynamische Transkription einer großen Datenbasis bestehend aus Scans mittelalterlicher Handschriften ermöglicht.
 In dieser Arbeit sollen die Hintergründe sowie unsere Ideen und Gedankengänge auf dem Weg vom Thema zum konkreten Projektauftrag,
-die von uns betrachteten (Teil-)Aufgaben sowie die Ergebnisse präsentiert
+die von uns betrachteten (Teil-)Aufgaben sowie die Ergebnisse präsentiert 
 und die Architektur der entstandenen Software beschrieben werden.
 Dazu sollen zunächst die theoretischen Grundlagen erläutert werden,
 um daraus im Anschluss unsere Projektdefinition abzuleiten und
@@ -63,9 +63,10 @@ Dazu soll zunächst die Definition von Citizen Science aus der Vorlesung rekapit
 Es sei hierbei auch auf Literatur zum Thema verwiesen.
 
 Es handelt sich bei ,,Citizen Science'' um einen verhältnismäßig neumodischen Begriff
-für ein gleichnamiges Teilgebiet der angewandten Sozial- und Geisteswissenschaften, was nicht heißt, dass die Idee der grundsätzlich neu ist.
+für ein gleichnamiges Teilgebiet der angewandten Sozial- und Geisteswissenschaften,
+was nicht bedeutet, dass die Idee hinter dem Begriff Citizen Science grundsätzlich neu ist.
 Tatsächlich lassen sich Aktivitäten, die heutzutage unter diesem Begriff zusammengefasst werden,
-fast 200 Jahre in die Vergangenheit zurückverfolgen.
+fast 200 Jahre in der Geschichte zurückverfolgen.
 Anwendungsmöglichkeiten und die Komplexität dieses Themengebietes
 wurden uns im Laufe der Lehrveranstaltung an aktuellen sowie an historischen Beispielen veranschaulicht
 und sowohl Gemeinsamkeiten als auch Unterschiede zwischen den verschiedenen in den Beispielen verfolgten Ansätzen herausgearbeitet.
@@ -74,128 +75,107 @@ versuchen wir die Komplexität noch einmal in den zwei folgenden Unterkapiteln e
 und einer Definition so nahe zu kommen, wie es uns möglich ist.
 
 \subsection{Definition Citizen Science}
-Der Frage nach der Definition von Citizen Science versucht Wiederhold\cite{Wiederhold} (S.703-4) in seinen Arbeiten mit der Annäherung über den Begriff des ,,Citizen Scientist'' zu beantworten.
+Der Frage nach der Definition von Citizen Science versucht Wiederhold\cite{Wiederhold} (S.703-4) in ihren Arbeiten mit der Annäherung über den Begriff des ,,Citizen Scientist'' zu beantworten.
 Es werden dazu aktuelle Entwicklungen, wie etwa das relativ bekannte FoldIt-Spiel \footnote{
-FoldIt ist ein Onlinespiel, das sich mit Eigenschaften von Proteinen befasst. Der Spieler benötigt keinerlei biologisches Hintergrundwissen, sondern ein Gefühl für räumliche Bewegung der Spielelemente. Spielergebnisse liefern wertvolle Daten für Wissenschaftler und haben zu wichtigen Erkenntnissen in der Virenforschung geführt. \url{https://fold.it/portal/}}
-, sowie historische Beispiele erwähnt, die in die Citizen Science eingeordnet werden.
+FoldIt ist ein Onlinespiel, das sich mit Eigenschaften von Proteinen befasst. Der Spieler benötigt keinerlei biologisches Hintergrundwissen, sondern ein Gefühl für räumliche Bewegung der Spielelemente. Spielergebnisse liefern wertvolle Daten für Wissenschaftler und haben zu wichtigen Erkenntnissen in der Virenforschung geführt. \url{https://fold.it/portal/}}, 
+sowie historische Beispiele betrachtet, die in die Citizen Science eingeordnet werden.
 Eines der ältesten bekannten Projekte, so Wiederhold, ist das National Audubon Society's Christmas Bird Count-Projekt\footnote{Das Projekt wurde 1900 von Frank M. Chapman gegründet.
 Ziel war es, Vogelarten zu bestimmen und zu zählen, um der bis dahin üblichen ,,Side Hunt'',
 die jedes Jahr zur Weihnachtszeit Jäger dazu herausforderte, so viele Vögel wie möglich zu schießen,
 eine umweltverträgliche Alternative zu bieten. \url{https://www.audubon.org/conservation/science/christmas-bird-count}}.
-Auch heute ist dieses Projekt noch relevant, wie die dazu existierende Homepage mit aktuellen Nachrichten verdeutlicht.
-
+Auch heute ist dieses Projekt noch relevant, wie die dazu existierende Homepage mit aktuellen Nachrichten verdeutlicht.\\
 Diese zwei Beispiele lassen gleichzeitig auch eine Bereicherung der historischen Citizen Science durch die digitale Welt erkennen.
 Obwohl viele bekannte Projekte weiterhin unter ,,Environmental Science'', wie Wiederhold sie nennt, einzuordnen sind,
 besteht in einer großen Anzahl der Projekte die Arbeit für den Citizen Scientist nur aus nicht maschinell abstrahierbarer Computerarbeit,
-welche wenig bis keine Vorkenntnisse erfordert.
-
-Unter Berücksichtigung der bis hierhin erwähnten Fakten, könnte man also bereits versuchen, den Citizen Scientist zu definieren, wie Wiederhold im ersten Absatz ihres Artikels,
-in dem sie Cohn zitiert: ,,The term 'citizen scientists' refers to volunteers who participate as field assistants in scientific studies.
-Citizen scientists...are not paid for their assistance, nor are they necessarily even scientists.'' \cite{Cohn} (58:192-7).
-Dabei scheint diese Definition auf den ersten Blick treffend die Umstände zu beschreiben,
-unter denen ein solcher Citizen Scientist arbeitet und in welche Themengebiete er sich einbringt, jedoch lässt sie entscheidente Aspekte für die Definition der Citizen Science selbst vermissen.
+welche wenig bis keine Vorkenntnisse erfordert.\\
+Unter Berücksichtigung dieser Betrachtungen definiert Wiederhold den Citizen Scientist nach Cohn\cite{Cohn}: 
+,,The term 'citizen scientists' refers to volunteers who participate as field assistants in scientific studies.
+Citizen scientists...are not paid for their assistance, nor are they necessarily even scientists.''(58:192-7).
+Diese Definition beschreibt treffend die Rahmenbedingungen, unter denen ein solcher Citizen Scientist arbeitet 
+und in welche Themengebiete er sich einbringt, jedoch lässt sie entscheidende Aspekte für die Definition der Citizen Science selbst vermissen.\\
 Fragen die nicht beantwortet werden, sind beispielsweise solche nach dem Rahmen bei der Bestimmung einer Forschungsfrage,
-eines Projektzieles, oder auch welche Finanzierungsmöglichkeiten für solche Projekte bestehen.
-Wie genau ist es mit der Wissenschaftlichkeit des Projektes zu nehmen und muss es einem gesellschaftlichen, also eher wohltätigen,
-Zweck dienen oder darf es auch einen kommerziellen Charakter aufweisen?
-Wo ist die Grenze zum Crowdsourcing\footnote{Crowdsourcing: Bezeichnend für das Auslagern interner Aufgaben eines Unternehmens an Freiwillige Nicht-Angestellte.
-Angelehnt an den Begriff Outsourcing, bei dem Drittunternehmen ausgelagerte Aufgaben verrichten. Häufig wird Crowdsourcing über das Internet realisiert.} zu ziehen?
-
+dem notwendigen Grad an Wissenschaftlichkeit des Projektes, oder auch welche Finanzierungsmöglichkeiten für derartige Projekte bestehen.
+Der Idee der Definition über den Citizen Scientist folgend beschreibt Cohn Citizen Science als 
+,,die wissenschaftlichen Aktivitäten in denen nicht-professionelle Wissenschaftler sich freiwillig an Datensammlung, 
+Analyse und Verbreitung eines wissenschaftlichen Projekts beteiligen.''\cite{Cohn}.\\
+Für ihn ist der Citizen Scientist eindeutig wissenschaftlich tätig und dieser Aspekt spielt eine entscheidende Rolle 
+bei der Konzeption von Projekten. Unbeantwortet bleibt die Frage nach den Finanzierungsmöglichkeiten des Projektes 
+(auch wenn freiwillige Arbeit der Citizen Scientists im Sinne von ehrenamtlicher Tätigkeit zu verstehen ist) bzw. wo die
+Grenze zum Crowdsourcing\footnote{Crowdsourcing: Bezeichnend für das Auslagern interner Aufgaben eines Unternehmens an Freiwillige Nicht-Angestellte. Angelehnt an den Begriff Outsourcing, bei dem Drittunternehmen ausgelagerte Aufgaben verrichten. 
+Häufig wird Crowdsourcing über das Internet realisiert.} zu ziehen ist.\\
 Um diese Fragen für uns beantworten zu können, befassten wir uns mit unterschiedlichen, bereits existierenden Projekten.
 Einige davon gehörten eindeutig zum Crowdsourcing, andere wiederum waren für uns nicht so eindeutig zuzuordnen.
-Gewissermaßen kann man also Crowdsourcing und Citizen Science als zwei gegensätzliche Pole einer Skala betrachten.
-Dieser Meinung ist auch Haklay\cite{Haklay} (pp 105-122), der diese Skala näher analysierte, worauf im kommenden Kapitel eingegangen werden soll.
-\newline
-Auch Crowston und Wiggins\cite{CW} versuchten sich an einer eigenen Definition von Citizen Science.
-Laut ihrer Untersuchung lässt sich das Spektrum der Projekte in folgende fünf Kategorien unterteilen:
+Gewissermaßen kann man also Crowdsourcing und reine Citizen Science als zwei gegensätzliche Pole einer Skala betrachten.
+Dieser Meinung ist auch Haklay\cite{Haklay} (pp 105-122), der eine solche Skala näher analysierte, 
+worauf im kommenden Kapitel eingegangen werden soll.
+Auch Crowston und Wiggins\cite{CW} leisteten bedeutende Arbeit für die praktische Einordnung von Projekten in die Citizen Science.
+Laut ihren Untersuchungen lässt sich das Spektrum der Projekte in folgende fünf Kategorien unterteilen:
 ,,Based on the clustering, we identified five mutually exclusive and exhaustive types of projects,
 which we labelled Action, Conservation, Investigation, Virtual and Education'' (S. 5).
 Auch diese sollen im Folgekapitel noch einmal einzeln Erwähnung finden.
-Unter Berücksichtigung dieser Kategorisierung fällt es womöglich schon um einiges leichter,
-sich ein Bild vom Charakter der Citizen Science zu machen.
-Ein letzter Definitionsversuch, der hier Erwähnung finden soll, kommt ebenfalls von Cohn,
-als ,,die wissenschaftlichen Aktivitäten in denen nicht-professionelle Wissenschaftler sich freiwillig an Datensammlung, Analyse und Verbreitung eines wissenschaftlichen Projekts beteiligen.''\cite{Cohn}.
-An dieser Definition lassen sich vor allem zwei bemerkenswerte Tatsachen finden. Zum einen ist es ein Versuch,
-sich über die Definition eines Citizen Scientists zu definieren. Zum anderen wird ausdrücklich darauf aufgebaut,
-dass es sich bei Citizen Science um eine wissenschaftliche Tätigkeit handelt.
-Ob dies einer Tatsache in Sachen Definition entsprechen muss ist unserer Auffassung nach eine Auffassungssache,
-da es auch Projekte gibt, deren Wissenschaftlichkeit angezweifelt werden kann,
-deren Einordnung in die Kategorie der Citizen Science für uns durchaus ein Diskussionsthema war.
-Ein Beispiel könnte das ReClam The Bay Projekt\footnote{ReClam The Bay: Projekt zur Stärkung der Muschelpopulation an bestimmten Stränden.
-\url{www.reclamthebay.org}} sein, das durchaus ein sinnvolles Ziel verfolgt und Aufklärung betreibt,%sinnvoll subjektiv? FIXME
-das jedoch an erster Stelle ein umweltveränderndes Ziel verfolgt und keine wissenschaftlichen Daten erhebt oder anderen wissenschaftlichen Nutzen aufbaut.
-\newline
-Bevor wir versuchen, unser Projektthema im Rahmen der Citizen Science einzuordnen,
-möchten wir noch einige Ansichten bezüglich der Einteilung der Citizen Science in unterschiedliche Kategorien beleuchten.
+
 
 \subsection{Kategorien der Citizen Science}
-Wie bereits erwähnt, machte sich auch Haklay Gedanken über die Möglichkeiten, Citizen Science vom Crowdsourcing zu trennen.
-Seine Überlegungen nach existiert eine Skala, welche das Crowdsourcing nur als das eine Extremum betrachtet und diesem die ,,Extreme Citizen Science'' entgegenstellt.
-Die intesanntesten Ebenen liegen im Spektrum zwischen diesen beiden. Die vier Kategorien untergliedern sich wie folgt:
 
-\begin{description}
-\item[Level 1: Crowdsourcing.]
-Hier beruht die Computerarbeit auf freiwilliger Basis.
-Die einfache Bürgerschaft dient lediglich als Sensor, andere Aufgaben werden von anderer Seite aus erledigt.
-\item[Level 2: Distributed Intelligence.]
-Auf diesem Level sollen Freiwillige Denkarbeit verrichten und werden dabei grundlegend für Interpretative Aufgaben eingesetzt.
-\item[Level 3: Participatory Science.]
-In dieser Kategorie werden die Freiwilligen bereits in der Problemdefinition mit einbezogen, sie übernehmen aber auch Aufgaben zur Sammlung von Daten.
-\item[Level 4: Extreme Citizen Science.]
-Diese Kategorie betrachtet den gesamten wissenschaftlichen Prozess als kollaborative Aufgabe für die freiwillige Teilnehmerschaft.
-Sie nimmt an der Problemdefinition ebenso teil wie an der Sammlung von Daten und deren Analyse.\cite{Haklay} (pp 115)
-\end{description}
-
-Während Haklay versucht, den Unterschied der Citizen Science nach außen abzugrenzen, gibt es auf der anderen Seite auch Überlegungen,
-wie die Citizen Science sich nach Innen hin aufteilen lässt. Wie bereits im vorangehenden Unterkapitel erwähnt wurde,
-fanden Crowston und Wiggins fünf Cluster unterschiedlicher, bereits existierender Projekte, die zumindest von sich behaupten,
-in die Kategorien der Citizen Science zu gehören.
-
-\begin{description}
-\item[Action:]
-Bei Action handelt es sich um Projekte, die ihren Ursprung häufig in einem lokal angesiedelten Beweggrund sehen.
+Nach Hacklay existieren folgende vier Abstufungen\cite{Haklay} (pp 115) in der Charakterisierung von Projekten zwischen Citizen Science und Crowdsourcing.
+\begin{enumerate}
+\item{Level 1: Crowdsourcing\\
+Hier hat die einfache Nutzerschaft lediglich die Aufgabe der Datenerhebung, die Interpretation erfolgt an anderer Stelle.}
+\item{Level 2: Distributed Intelligence\\
+Auf diesem Level sollen freiwillige Nutzer Denkarbeit verrichten und werden dabei grundlegend für interpretative Aufgaben eingesetzt.}
+\item{Level 3: Participatory Science\\
+In dieser Kategorie werden die Freiwilligen bereits in der Problemdefinition mit einbezogen, sie übernehmen aber auch Aufgaben zur Sammlung von Daten.}
+\item{Level 4: Extreme Citizen Science\\
+Diese Kategorie betrachtet den gesamten wissenschaftlichen Prozess als kollaborative Aufgabe für die freiwillige Nutzerschaft.
+Sie nimmt an der Problemdefinition ebenso teil wie an der Sammlung von Daten und deren Analyse.}
+\end{enumerate}
+Während Haklay versucht, den Unterschied der Citizen Science nach außen abzugrenzen, gibt es wie im letzten Kapitel beschrieben auch 
+Bestrebungen, die Citizen Science in aussagekräftige Kategorien zu teilen. Crowston und Wiggins definierten hierfür folgende fünf Cluster: 
+\begin{itemize}
+\item{Action\\
+Bei Action handelt es sich um Projekte, die ihren Ursprung häufig in einem lokal begrenzten Umfeld haben.
 Sie werden nicht durch Wissenschaftler in die Wege geleitet,
-sondern viel eher durch einfache Leute, die einen Handlungsbedarf sehen und eine Bewegung für Freiwillige ins Leben rufen.
+sondern ,,einfache'' Leute, die einen singulären Handlungsbedarf sehen und eine Bewegung für Freiwillige ins Leben rufen.
 Für gewöhnlich geht es dabei um Ziele, welche die Umwelt betreffen.
-Technologien kommen dabei nur minimal zum Einsatz, soweit sie von Notwendigkeit sind.
-\item[Conservation:]
-Conservation befasst sich mit dem Management der natürlichen Ressourcen.
+Technologien kommen dabei nur minimal zum Einsatz, soweit sie von Notwendigkeit sind.}
+\item{Conservation\\
+Conservation befasst sich mit dem Management und Erhalt der natürlichen Ressourcen bzw. Biodiversität.
 Freiwillige haben dabei häufig Verwaltungsaufgaben oder sind dafür zuständig, eine breitere Masse zu erreichen.
-Folglich ist auch Wissensvermittlung ein explizites Ziel, welches mit dieser Projektgruppierung einhergeht.
-Finanzierung ist oft ein Problem, das nur über staatliche Gelder gelöst werden kann und somit eine starke Abhängigkeit aufbaut.
-\item[Investigation:]
-Investigation hat wissenschaftliche Untersuchungergibnisse zum Ziel.
+Folglich ist auch Wissensvermittlung ein untergeordnetes Ziel, dieser Art von Projekten.
+Finanzierung ist oft ein Problem, das nur über staatliche Gelder gelöst werden kann und oft 
+zu starker Abhängigkeit von entsprechenden Stellen führt.}
+\item{Investigation\\
+Investigation hat wissenschaftliche Datenerhebungen zum Ziel.
 Hier werden Daten von Freiwilligen im physikalischen Umfeld gesammelt.
-Bildung ist hier zwar kein Ziel, oft jedoch ein Faktor, der die Arbeit erheblich genauer (und somit besser auswertbar) und effizienter gestaltet.
-Gleichzeitig ist Bildung auch ein durchaus gewöhnlicher Nebeneffekt der Arbeit mit der Materie.
-\item[Virtual:]
-Virtual weist viele Parallelen zu Investigation auf, spielt sich jedoch statt in einer physikalischen, in einer virtuellen Umgebung ab.
-Gerade hier ist es nicht so leicht, die Teilnehmer als Citizen Scientists wahrzunehmen, da sie oft nur eine Instanz sind, die Daten verarbeitet und validiert.
-Probleme, mit denen man sich hier befassen muss ist die Validierung der Daten, da es auch unausweichlich eine Fehlerrate gibt,
-und die große Masse an Nutzern, die auf den komplexen Plattformen agiert, zu behandeln.
-\item[Education:]
-Education hat, wie der Name vermuten lässt, einen primären Bildungsauftrag zum Ziel.
-Nicht immer ist es dabei leicht, Gelder zu erhalten, welche die hohen Kosten decken.
-Vor allem aus dem Grund, dass kaum Daten generiert werden, die in irgendeiner Form nutzbar wären, wird kein wirtschaftlicher Mehrwert generiert,
-was die Finanzierung umso mehr erschwert.
-\end{description}
-Sicher lassen sich noch wesentlich mehr Kategorien für konkrete Anwendungs-fälle finden,
-doch für den Zweck der Charakterisierung und Einordnung unseres Projektes sollen die Arbeiten von Haklay sowie Crowston und Wiggins als repräsentative Beispiele genügen.
+Bildung und Wissensvermittlung sind hier zwar kein explizites Ziel, oft jedoch sind Vorkenntnisse der freiwilligen Helfer ein Faktor,
+der die Arbeit erheblich genauer und effizienter gestaltet.}
+\item{Virtual\\
+Virtual weist viele Parallelen zu Investigation auf, spielt sich jedoch in virtueller Umgebung ab.
+Besonders hier ist es nicht so leicht, die Teilnehmer als Citizen Scientists wahrzunehmen, da sie oft nur eine Zwischeninstanz darstellen, 
+welche Daten verarbeitet.
+Probleme, mit denen man sich hier besonders befassen muss ist die Validierung der Daten und das Management 
+einer große Masse an Nutzern, die auf teilweise sehr komplexen Plattformen agiert.}
+\item{Education\\
+Education hat, wie der Name vermuten lässt, einen primären Bildungsauftrag.
+Nicht immer ist es dabei leicht, ausreichend Gelder über Sponsoren zu erhalten, da meist nur ein geringer wissenschaftlicher oder
+wirtschaftlicher Mehrwert erzielt wird.}
+\end{itemize}
+Sicher lassen sich noch wesentlich mehr Kategorien für konkrete Anwendungsfälle finden,
+doch für den Zweck der Charakterisierung und Einordnung unseres Projektes sollen die Arbeiten von Haklay sowie Crowston und Wiggins als 
+Referenz genügen.
 
-\subsection{Einordnung unseres Projektes}
-Unserer Einschätzung nach ist TranscriptionDesk aufgrund der Aufgabenstellung durchaus als Citizen Science und nicht als Crowdsourcing zu betrachten.
-Betrachten wir unseren Standpunkt durch Haklays Augen, so würden wir unser Projekt auf Level 2, der ,,Distributed Intelligence'' einordnen,
-da Freiwillige ganz zur Interpretation der Texte eingesetzt werden sollen und somit ihre Denkleistung in Anspruch genommen wird.
-Außerdem ist die Problemdefinition bereits vorgegeben, so dass wir das Projekt auch nicht auf Level 3 einordnen könnten.
-Man sollte dennoch Notiz davon nehmen, dass wir damit dem Crowdsourcing nach Haklay sehr nahe kommen.%damit genauer ausführen FIXME
-
+\subsection{Einordnung und Definition TranscriptionDesk}
+Unserer Einschätzung nach ist TranscriptionDesk aufgrund der Aufgabenstellung der interpretierenden Transkription auf Haklays Skala näher am
+Crowdsourcing als an der extreme Citizen Science einzuordnen.
+Das Level 2, also die ,,Distributed Intelligence'' erscheint uns passend, da die freiwilligen Mitarbeiter 
+eine Analyse, also eine klare Denkleistung durchführen sollen.
+Außerdem ist mit der Problemdefinition das Projektziel bereits vorgegeben, so dass die Vorraussetzungen für Level 3 nicht gegeben sind.\\
 Schauen wir uns die Kategorien von Crowston und Wiggins an, so müssen wir TranscriptionDesk zwangsläufig zur Kategorie ,,Virtual'' zählen.
-Alle Faktoren des Projektes treffen genau zu.
-Lediglich einige wenige Faktoren der Action-Kategorie werden ebenfalls erfüllt, da Beispielsweise der Ursprung des Projektes darin liegt,
-dass Daten vorhanden sind, die transkribiert und validiert werden müssen und somit der Beweggrund für das Projekt darin lag,
-dass die Notwendingkeit zum Handeln erkannt wurde.
-Der wesentlichste Unterschied ist nur, dass es keinen lokalen, umweltbezogenen Handlungsfaktor gab, der Ausschlag dafür gegeben hat.
-Somit ist ,,Virtual'' die einzig zutreffende Kategorie.
+Alle Faktoren des Projektes treffen exakt zu.\\
+Auch einige wenige Faktoren der Action-Kategorie werden ebenfalls erfüllt, da Beispielsweise der Ursprung des Projektes darin liegt,
+dass Daten vorhanden sind, die transkribiert und validiert werden müssen und somit eine Notwendigkeit zum Handeln 
+den Ausschlag für das Projekt gab.
+Das Hauptargument gegen die Action-Kategorie ist, dass es keinen lokal begrenzten, umweltbezogenen Faktoren für den Handlungsbedarf gab.
 
 \section{Projektübersicht}
 In diesem Kapitel soll mit einer detaillierten Übersicht über das Projekt und dessen Zielstellung ein direkter Einstieg geben werden.
