--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -99,10 +99,12 @@ Der Idee der Definition über den Citizen Scientist folgend beschreibt Cohn Citi
 ,,die wissenschaftlichen Aktivitäten in denen nicht-professionelle Wissenschaftler sich freiwillig an Datensammlung, 
 Analyse und Verbreitung eines wissenschaftlichen Projekts beteiligen.''\cite{Cohn}.\\
 Für ihn ist der Citizen Scientist eindeutig wissenschaftlich tätig und dieser Aspekt spielt eine entscheidende Rolle 
-bei der Konzeption von Projekten. Unbeantwortet bleibt die Frage nach den Finanzierungsmöglichkeiten des Projektes 
-(auch wenn freiwillige Arbeit der Citizen Scientists im Sinne von ehrenamtlicher Tätigkeit zu verstehen ist) bzw. wo die
-Grenze zum Crowdsourcing\footnote{Crowdsourcing: Bezeichnend für das Auslagern interner Aufgaben eines Unternehmens an Freiwillige Nicht-Angestellte. Angelehnt an den Begriff Outsourcing, bei dem Drittunternehmen ausgelagerte Aufgaben verrichten. 
-Häufig wird Crowdsourcing über das Internet realisiert.} zu ziehen ist.\\
+bei der Konzeption von Projekten. Unserer Meinung nach ist diese Definition treffend und für unser Projekt präzise genug, 
+auch wenn die Frage nach den Finanzierungsmöglichkeiten vorerst unbeantwortet bleibt.\\
+Auch wird in dieser Definition keine klare Grenze zum Crowdsourcing
+\footnote{Crowdsourcing: Bezeichnend für das Auslagern interner Aufgaben eines Unternehmens an Freiwillige Nicht-Angestellte. 
+Angelehnt an den Begriff Outsourcing, bei dem Drittunternehmen ausgelagerte Aufgaben verrichten. 
+Häufig wird Crowdsourcing über das Internet realisiert.} gezogen.\\
 Um diese Fragen für uns beantworten zu können, befassten wir uns mit unterschiedlichen, bereits existierenden Projekten.
 Einige davon gehörten eindeutig zum Crowdsourcing, andere wiederum waren für uns nicht so eindeutig zuzuordnen.
 Gewissermaßen kann man also Crowdsourcing und reine Citizen Science als zwei gegensätzliche Pole einer Skala betrachten.
@@ -164,7 +166,7 @@ Sicher lassen sich noch wesentlich mehr Kategorien für konkrete Anwendungsfäll
 doch für den Zweck der Charakterisierung und Einordnung unseres Projektes sollen die Arbeiten von Haklay sowie Crowston und Wiggins als 
 Referenz genügen.
 
-\subsection{Einordnung und Definition TranscriptionDesk}
+\subsection{Einordnung des TranscriptionDesk}
 Unserer Einschätzung nach ist TranscriptionDesk aufgrund der Aufgabenstellung der interpretierenden Transkription auf Haklays Skala näher am
 Crowdsourcing als an der extreme Citizen Science einzuordnen.
 Das Level 2, also die ,,Distributed Intelligence'' erscheint uns passend, da die freiwilligen Mitarbeiter 
@@ -185,67 +187,56 @@ Dazu soll ausgehend von der Projektvision die Struktur der Datenbasis erläutert
 Unser Projektthema fand seine Motivation in der Abteilung der Digitalen Geistes-wissenschaften der Universität Leipzig.
 Dort liegen tausende Scans mittelalter-licher Schriftstücke vor, deren Informationsgehalt ohne vorherige Transkription nicht digital zu verarbeiten ist.
 Es wurde als unmöglich bewertet, den Inhalt der Schriftstücke mittels typischer Optical-Character-Recognition-Methoden (OCR) sinnvoll zu digitalisieren.
-Das hat im Wesentlichen zwei Gründe.
-
-Einerseits war Papier im Mittelalter eine Mangelware und somit ein wertvolles Gut, das sparsam verwendet wurde.
+Das hat im Wesentlichen zwei Gründe.\\
+Einerseits war Papier im Mittelalter Mangelware und somit ein wertvolles Gut, welches sparsam verwendet wurde.
 Deswegen nutzte man freien Platz gut aus und es gibt Passagen,
 die nicht in einen gemeinsamen zeitlichen Kontext gehören (z.B. nachträgliche Annotationen) und somit händisch getrennt werden müssen.
 Der Fakt, dass die Schriftstücke aufgrund ihres Alters bereits durch viele Hände gegangen sind und im Laufe der Zeit
-mit unterschiedlichen Handschriften auf dem Papier gearbeitet wurde, erschwert dies umso mehr.
-Diese Informationen sollen entsprechend getrennt und digitalisiert werden.
-
+mit unterschiedlichen Handschriften auf dem Papier gearbeitet wurde, erschwert OCR umso mehr.
+Diese Informationen sollen entsprechend getrennt und digitalisiert werden.\\
 Der zweite Grund besteht darin, dass das Schriftbild des Mittelalters oft künst-lerisch aufgewertet wurde.
 So waren Texte in Blockform sehr beliebt und man erfand allerlei unterschiedliche Formen für semantisch gleichbedeutende Buchstaben,
-die durch ihre Vielfalt für einen OCR-Algorithmus praktisch unmöglich zu lesen sind.
-
+die durch ihre Vielfalt für einen OCR-Algorithmus praktisch unmöglich zu lesen sind.\\
 Die Aufgabe, welche sich daraus ergibt, kann praktisch nur durch akribische, händische Arbeit gelöst werden.
-An dieser Stelle soll die Citizen Science ins Spiel kommen:
-Durch den Aufbau einer Webplattform könnte ein großer Teil der kleinlichen Arbeit nach außen,
+An dieser Stelle soll die Citizen Science ins Spiel kommen; durch den Aufbau einer Webplattform könnte ein großer Teil der Arbeit nach außen,
 an Freiwillige mit unterschiedlichen Erfahrungen und unterschiedlichem Wissen abgegeben werden.
-Dadurch soll die Digitalisierung der auf den Scans enthaltenen Texte nicht nur beschleunigt, sondern womögliche sogar erst ermöglicht werden.
-
-Das Ziel, das wir vor Augen haben ist also der Aufbau einer Weboberfläche, welche die Scans an eine offene Gruppe freiwilliger Nutzer bereitstellt,
+Dadurch soll die Digitalisierung der auf den Scans enthaltenen Texte beschleunigt, wenn nicht erst ermöglicht werden.\\
+Das Ziel, das wir vor Augen haben ist also der Aufbau einer Weboberfläche, welche die Scans einer offene Gruppe freiwilliger Nutzer anbietet,
 ihnen die Werkzeuge für deren Bearbeitung bereitstellt, die Ergebnisse speichert, und der Nutzerschaft die Möglichkeit bietet,
 ihre gegenseitigen Ergebnisse zu bewerten, um ein einheitliches Level an Validierung der digialisierten Texte anzustreben.
 Die Seite soll so strukturiert sein, dass sie weitestgehend selbstverwaltend ist und lediglich einige wenige Administratoren
-die wenigen verbleibenden Verwaltungsaufgaben erledigen können.
-Dabei ist auch die Möglichkeit gegeben, diese Administratoren ebenfalls in Teilen aus der Nutzerbasis zu beziehen.
-
+die verbleibenden Verwaltungsaufgaben erledigen können.
+Dabei ist auch die Möglichkeit gegeben, diese Administratoren ebenfalls in Teilen aus der Nutzerbasis zu beziehen.\\
 Die Arbeit für einen Nutzer soll aus zwei unterschiedlichen Aufgaben bestehen.
-Erstere besteht darin, Rechtecke auf den Scans zu ziehen, um ,,Areas of Interest'' zu markieren.
-Diese können beispielsweise Bilder oder zusammengehörende Textfetzen sein.
+\begin{itemize}
+\item{Erstere besteht darin, Rechtecke auf den Scans zu ziehen, um ,,Areas of Interest'' zu markieren.
+Dies können beispielsweise Bilder oder zusammengehörende Textfetzen sein.
 Das Ergebnis ist eine Interest Map eines Scans, die andere Nutzer bewerten können, um deren Akzeptanz wiederzuspiegeln.
-Scans können direkt ausgewählt oder per Zufall zugeordnet werden.
-
-Die zweite Aufgabe besteht dann aus der eigentlichen Transkription.
+Scans können direkt ausgewählt oder per Zufall zugeordnet werden.}
+\item{Die zweite Aufgabe besteht aus der eigentlichen Transkription.
 Eine Interest Map wird verwendet und die darauf enthaltenen Areas of Interest werden vom Nutzer mit einer Transkription versehen.
-Auch dieses Ergebnis lässt sich speichern und bewerten und somit wird ein bestes Ergebnis ermittelbar.
+Auch dieses Ergebnis wird gespeichert und bewertet und es wird ein bestes Ergebnis ermittelbar.}
+\end{itemize}
 Unsere Aufgabe ist es dabei, all diese Funktionen als Grundfunktionalität zu implementieren und sie ansprechend zu gestalten.
-Der letzte Punkt ist für uns sehr wesentlich, da uns bekannt ist, dass ähnliche (und darunter technisch gesehen sehr gute)
+Der letzte Punkt ist für uns sehr wesentlich, da bei unserer Recherche auffiel, dass ähnliche (und darunter technisch gesehen sehr gute)
 Projekte bereits an kleinen Schönheitsfehlern scheitern mussten, weil die Nutzer sich einfach nicht angesprochen fühlten.
 Zusätzlich gehört es aus mehreren Gründen zu unserem Ziel, eine Login-Routine für das User-Management aufzubauen.
 Dies bietet viele Vorteile beim Verfolgen von Veränderungen, für eine faire Verteilung von Bewertungen,
-oder etwa um Statistiken einzelner oder auch aller Nutzer zu erstellen.
+oder etwa um Statistiken einzelner oder auch aller Nutzer zu erstellen.\\
 Außerdem besteht eine unserer wichtigsten Aufgaben darin, auf der gesamten Weboberfläche Unicode verwendbar und lesbar zu machen.
 Ganz speziell bedeutet das, das wir eine sehr umfangreiche Eingabemaske aufbauen müssen,
 die einen mächtigen Satz an mittelalterlichen Sonderzeichen in einer nutzerfreundlichen Art und Weise hergibt.
 Die Identifikation von Scans erfolgt über Cite URNs.% Quelle für Cite URNs zitieren! FIXME
-Wir wollen die Areas of Interest durch Erweiterung des Konzeptes ebenfalls über jene Cite URN identifizieren können.
-%<Irgendwas wichtiges vergessen? Hier ist die richtige Stelle>
-
+Wir wollen die Areas of Interest durch Erweiterung des Konzeptes ebenfalls über jene Cite URN identifizieren können.\\
 Die bisher genannten Features haben die höchste Priorität und bilden die Grundfunktionalität unserer Weboberfläche.
 Ab diesem Punkt lassen sich schrittweise weitere Features hinzufügen um die Arbeit zu erleichtern, angenehmer oder einfach ansprechender zu gestalten.
-Deswegen haben wir unsere anfängliche Planung mittels Scrum an ein agiles Entwicklungsmodell angelehnt.
-Zuerst planten wir unsere grobe Architektur sowie diverse Technologien, die wir Verwenden könnten.
+Deswegen haben wir unsere anfängliche Planung mittels Scrum an ein agiles Entwicklungsmodell angelehnt.\\
+Zuerst planten wir unsere grobe Architektur sowie diverse Technologien, die wir verwenden könnten.
 Auf beides werden wir in Folgekapiteln noch einen genaueren Blick werfen. Dann wurden drei Meilensteine geplant,
-wobei der erste davon für die Erstellung der Nutzerauthentifikationsroutine und die Anbindung der im Hintergrund genutzten Diensten angedacht war.
+wobei der erste davon für die Erstellung der Nutzerauthentifikationsroutine und die Anbindung der im Hintergrund genutzten Dienste enthielt.
 Im zweiten Meilenstein ging es im Prinzip um alles, was die Maske der Weboberfläche sowie die Implementation der Arbeitswerkzeuge für die Nutzer betrifft.
 Damit sollte die Grundfunktionalität weitestgehend aufgebaut sein. Für alle Eventualitäten soll es noch einen dritten Meilenstein geben,
 in dem konkrete Bugs gelöst werden sollen und, falls dann noch ausreichend Zeit bleibt, direkt weitere Funktionen implementiert werden können.
-
-%Warum haben wir <herp> gemacht?
-%Rückbezug zu unserer Definition von Citizen Science.
-
 \subsection{Struktur der Datenbasis}
 Wie sehen unsere Dokumente und Rohdaten aus?
 Wo kommen diese Daten her?
