--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -439,6 +439,8 @@ Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
     DESCRIBE ME!
 \item[bootbox:]
     DESCRIBE ME!
+\item[Require.js:]
+    DESCRIBE ME!
 \end{description}
 
 \subsection{Gesamtübersicht}
