--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -243,47 +243,34 @@ Wo kommen diese Daten her?
 %Open Philology-Project letzten Jahres. Bei Omeka einloggen um Infos detailiert zu sehen. Falls dort nicht zu sehen, SOFORT THOMAS BESCHEIDGEBEN!
 
 \subsection{Produkteinsatz / Erwartete Userbasis}
-Ausgehend von der Motivation des Projektes sehen wir den vielversprechendsten Weg der Umsetzung logischerweise im Citizen Science Paradigma.
-Es werden Freiwillige benötigt, die ein persönliches Interesse darin haben, an der Entwicklung und dem Erfolg des Projektes mitzuwirken.
+Aus diesen Überlegungen schlussfolgernd sehen wir einen plausiblen Weg der Umsetzung des Projektes im Citizen Science Paradigma.
+Es werden Freiwillige benötigt, die ein persönliches Interesse daran haben, am Foranschreiten und dem Erfolg des Projektes mitzuwirken.
 Unsere Aufgabe ist es, nicht nur eine Plattform zur Verfügung zu stellen, auf der die entsprechende Arbeit verrichtet werden kann,
-sondern auch für Nutzer einen Anreiz zur Aufnahme der Arbeit bzw. zum Weiterarbeiten zu schaffen.
-Dies kann auf technischem oder sozialem Weg erreicht werden.
-Wir haben uns dafür entschieden, beide Wege zu nutzen, um ein möglichst großes Publikum anzusprechen.
-So haben wir technische Anreize beispielsweise über auf der Seite veröffentlichte Bestenlisten realisiert, oder durch einfache,
-schön anzuschauende Statistiken der User selbst. Die Realisierung technischer Anreize und Funktionen, die sich für Nutzer belohnend anfühlen,
-bietet ein großes Spektrum an Möglichkeiten.
+sondern auch für Nutzer einen Anreiz zur Aufnahme der Arbeit bzw. zum Weiterarbeiten zu schaffen.\\
+Wir haben uns dafür entschieden, sowohl den technischen als auch den sozialen Weg zu gehen, um ein möglichst großes Publikum anzusprechen.
+So haben wir technische Anreize beispielsweise über auf der Seite veröffentlichte Bestenlisten realisiert, oder durch aussagekräftige,
+optisch ansprechende Statistiken über den User selbst. Die Realisierung technischer Anreize und Funktionen, 
+die sich für den einzelnen Nutzer belohnend anfühlen, bietet ein großes Spektrum an Möglichkeiten.
 Leider ist gerade dieses Thema jedoch eines, das eher nach Hinten verschoben werden musste,
-da es unter Beachtung unseres Zeitrahmens nach der Basisfunktionalität ein zweitrangiges Ziel darstellt.
-Deswegen ist an dieser Baustelle auch nur die bisher beschriebene Menge an Funktionen aufgebaut worden.%beschrieben wo genau? FIXME
-
-Wichtig sind jedoch auch die nicht-technischen Anreize.
-Diese müssen vielen Nutzern jedoch erst vor Augen geführt werden.
+da es unter Beachtung unseres Zeitrahmens nach der Umsetzung der Basisfunktionalität ein zweitrangiges Ziel darstellt.
+Deswegen ist an dieser Stelle auch nur die oben genannten Funktionen aufgebaut worden.\\
+Wichtig sind jedoch auch die nicht-technischen Anreize; diese müssen vielen Nutzern jedoch erst vor Augen geführt werden.
 Bedenkt man die Fülle an Datenmaterial, welches wir zur Verfügung stellen, so ist es kaum vorstellbar,
-dass ein einziger Nutzer mit vertrebarem Zeitaufwand alle Dokumente transkribieren kann.
+dass ein einziger Nutzer mit vertrebaren Zeitaufwand alle Dokumente transkribieren kann.
 Diese Arbeitsleistung wird erst dadurch möglich, dass eine größere Gemeinschaft sich der Aufgabe annimmt.
 Im Umkehrschluss bedeutet das aber auch, dass man die Ergebnisse anderer Nutzer sehen und von ihnen lernen könnte.
 Jeder, der am Projekt teilnimmt, tut dies mit großer Sicherheit aus dem Grund,
-dass er ein gewisses Interesse und Wissen in dem Gebiet hat, und dieses teilen oder vergrößern möchte.
+dass er ein gewisses Interesse und Wissen z.B. in dem Gebiet der lateinischen Handschriften hat, und dieses teilen oder vergrößern möchte.
 Unsere Plattform bietet diesen zwei Interessentengruppen genau das.
-Selbst wenn also ein Nutzer kaum nutzbares Wissen hat, so kann unsere Plattform doch auch für ihn profitabel sein.
-Er könnte dadurch mehr lernen, und unter Umständen dieses neu erworbene Wissen im gleichen Atemzug anwenden.
-Unsere Nutzergemeinschaft lebt also letzten Endes davon, dass jeder seine eigenen Wissensfetzen mitbringt
-und jeder von den anderen lernen kann und somit etwas Gutes für sich und für den wissenschaftlichen Erkenntnisgewinn tut.%etwas Gutes zu subjektiv. FIXME
-Wenn wir diese Erkenntnis vermitteln können, dann ist auch damit ein großer Anreiz geschaffen.
-Außerdem schaffen wir die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft austauschen zu können.
-
-Bedenken wir die Motivation, die für einen Benutzer geschaffen wird, so ergibt sich auch ein gewisses Bild von der Zielgruppe, die wir anzusprechen versuchen.
-Natürlich wird niemand ausgeschlossen, der Interesse an der Arbeit hat und soll mittels Tutorial an die Aufgabe herangeführt werden.
-Doch wir erwarten, dass der größte Teil unserer Teilnehmer sich aus einem Publikum zusammensetzt,
+Auch wenn ein Nutzer kaum Vorwissen im Transkribieren oder in Bezug auf lateinischer Schrift hat, kann er viel zum Projekt beitragen,
+im Verlauf dieser Arbeit sich dieses Wissen aneignen und im gleichen Atemzug anwenden.
+Außerdem schaffen wir damit die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft anzuschließen und 
+innerhalb dieser austauschen zu können.\\
+Aus diesen Überlegungen abgeleitet erwarten wir, dass der größte Teil unserer Teilnehmer sich aus einem Publikum zusammensetzt,
 das zumindest einen Bezug zur Wissenschaft und der lateinischen Sprache hat.
-Das betrifft vorwiegend Geistes- sowie Sprachwissenschaften. Auch geschichtsinteressiertes Publikum wird erwartet,
+Das betrifft vorwiegend Geistes- sowie Sprachwissenschaftler. Auch geschichtsinteressiertes Publikum wird erwartet,
 ebenso wie Teilnehmer, die einfach ein persönliches, nicht-wissenschaftliches Interesse an altertümlicher Sprache besitzen.
-Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen,
-welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
-
-%TODO SO FAR
-%Rückbezug zur Einordnung unserer Software in die entsprechende Kathegorie von Citizen Science.
-%Warum sollen sich Nutzer registrieren?
+Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen, welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
 
 \section{Produktfunktion}
 Dass Nutzer sich planmäßig auf unterschiedlichen Wegen an der Arbeit beteiligen können sollten wurde bereits in unseren Zielen angerissen.
@@ -393,8 +380,6 @@ Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
 \item[bootstrap:]
     DESCRIBE ME!
 \item[bootbox:]
-    DESCRIBE ME!
-\item[Require.js:]
     DESCRIBE ME!
 \end{description}
 
